@startuml

title __SECURITY's Class Diagram__\n

  namespace  {
    namespace k.posam.blog {
      namespace security {
        class sk.posam.blog.security.JwtAuthenticationFilter {
            - userDetailsService : UserDetailsService
            # doFilterInternal()
            - getJwtFromRequest()
        }
      }
    }
  }
  

  namespace  {
    namespace k.posam.blog {
      namespace security {
        class sk.posam.blog.security.JwtProvider {
            - keyStore : KeyStore
            + generateToken()
            + getUsernameFromJWT()
            + init()
            + validateToken()
            - getPrivateKey()
            - getPublickey()
        }
      }
    }
  }
  

  sk.posam.blog.security.JwtAuthenticationFilter -up-|> org.springframework.web.filter.OncePerRequestFilter
  sk.posam.blog.security.JwtAuthenticationFilter o-- sk.posam.blog.security.JwtProvider : jwtProvider


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
